--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>SpringMVCExample</groupId>
-    <artifactId>SpringMVCExample</artifactId>
+    <packaging>war</packaging>
+    <groupId>Sclinic</groupId>
+    <artifactId>Sclinic</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
