--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <packaging>war</packaging>
-    <groupId>Sclinic</groupId>
-    <artifactId>Sclinic</artifactId>
+    <groupId>clinic</groupId>
+    <artifactId>clinic</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
